--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "start": "npm run prisma:prepare && nest start",
   "start:dev": "nest start --watch",
   "start:debug": "nest start --debug --watch",
-  "start:prod": "npm run prisma:prepare && node dist/src/main.js",
+  "start:prod": "npx prisma migrate deploy && node dist/src/main.js",
   "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
   "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
   "test": "jest",
