--- a/package.json
+++ b/package.json
@@ -5,22 +5,21 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-"scripts": {
-  "build": "nest build",
-  "prisma:prepare": "npx prisma generate && npx prisma migrate deploy",
-  "start": "npx prisma migrate deploy && node dist/src/main.js",
-  "start:dev": "nest start --watch",
-  "start:debug": "nest start --debug --watch",
-  "start:prod": "npx prisma migrate deploy && node dist/src/main.js",
-  "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-  "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-  "test": "jest",
-  "test:watch": "jest --watch",
-  "test:cov": "jest --coverage",
-  "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-  "test:e2e": "jest --config ./test/jest-e2e.json"
-}
-,
+  "scripts": {
+    "build": "nest build",
+    "prisma:prepare": "npx prisma generate && npx prisma migrate deploy",
+    "start": "npx prisma migrate deploy && node dist/src/main.js",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "npx prisma migrate deploy && node dist/src/main.js",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.958.0",
     "@nestjs/common": "^11.0.1",
@@ -43,6 +42,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdf-lib": "^1.17.1",
+    "pdf2pic": "^3.2.0",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.6.0",
