--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdf-lib": "^1.17.1",
-    "pdf2pic": "^3.2.0",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.6.0",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.5",
     "stripe": "^20.1.0"
   },
   "devDependencies": {
