--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "prisma:prepare": "npx prisma generate && npx prisma migrate deploy",
-    "start": "npx prisma migrate deploy && node dist/src/main.js",
+    "start": "npx prisma db push --accept-data-loss && npx prisma generate && node dist/src/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "npx prisma migrate deploy && node dist/src/main.js",
